--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
 .allPages{
   padding: 0;
-  position: fixed;
-  left:59px;
+  position: relative;
+  margin-left: 59px;
+  left: 0;
   bottom: 0;
   top: 9vh;
   right: 0;
@@ -10,6 +12,7 @@
   flex-direction: column;
   overflow-y: auto;
 }
+
 /* App.css */
 
 /* ------------------ Layout ------------------ */
@@ -17,19 +20,15 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  /* overflow-x: hidden; */
 }
 
 .layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   background: var(--bg-primary);
-}
-
-.main-content {
-  flex: 1;
-  padding: 20px;
-  overflow-y: auto;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* Theme styling */
@@ -48,7 +47,7 @@ html, body {
   --text-primary-dark: white;
   --text-secondary-dark: #b0b0ff;
 
-  --accent-dark:black;
+  --accent-dark:#000000;
 
   /*  Updated Light Theme Colors */
   --bg-primary-light: linear-gradient(to bottom, #ffffff 0%, #cfeaff 100%);
@@ -72,6 +71,7 @@ html, body {
   --text-secondary: var(--text-secondary-light);
   --bg-primary: var(--bg-primary-light);
   --bg-secondary: var(--bg-secondary-light);
+  --bg-teritiary: var(--bg-secondary-dark);
   --bg-navbar: var(--bg-navbar-light);
   --bg-hover:var(--bg-hover-light);
   --bg-hover2:var(--bg-hover2-light);
@@ -83,6 +83,7 @@ html, body {
   --text-secondary: var(--text-secondary-dark);
   --bg-primary: var(--bg-primary-dark);
   --bg-secondary: var(--bg-secondary-dark);
+  --bg-teritiary: var(--bg-secondary-light);
   --bg-navbar: var(--bg-navbar-dark);
   --bg-hover:var(--bg-hover-dark);
   --bg-hover2:var(--bg-hover2-dark);
@@ -96,6 +97,6 @@ html, body {
     display: none;
   }
   .allPages{
-    left: 0px;
+    margin-left: 0;
   }
 }
