--- a/frontend/src/Styles/contact.css
+++ b/frontend/src/Styles/contact.css
@@ -1,8 +1,11 @@
+.contact-page{
+  min-height: 60vh;
+}
+
 .contact-container {
   padding: 40px;
   font-family: Arial, sans-serif;
   background: #f4f4f4;
-  min-height: 100vh;
 }
 
 .contact-title {
