--- a/frontend/src/Styles/eachPost.css
+++ b/frontend/src/Styles/eachPost.css
@@ -1,15 +1,7 @@
-.allPages2{
-    padding: 20px;
-    position: fixed;
-    left:60px;
-    bottom: 0;
-    top: 9vh;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    overflow-y: auto;
+.post-view-page{
+  padding: 4rem;
 }
+
 /* App.css */
 .post-detail {
   max-width: 850px;
