--- a/frontend/src/Styles/modelEach.css
+++ b/frontend/src/Styles/modelEach.css
@@ -198,6 +198,30 @@
   justify-content: center;
 }
 
+.model-specifics{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--bg-translucent);
+  border-radius: 2rem;
+  padding: 1rem;
+}
+
+.model-specifics>div{
+  width:50%;
+  padding: 0rem 1rem 0rem 2rem;
+  font-size: 1.2rem;
+}
+
+.model-specifics-heading{
+  text-align: center;
+  font-weight: 900;
+}
+
+.model-prerequisites{
+  border-left: 2px solid var(--text-primary);
+}
+
 .customization-toggler {
   margin: 3rem auto 1rem auto;
   display: flex;
