--- a/frontend/src/Styles/notifications.css
+++ b/frontend/src/Styles/notifications.css
@@ -1,10 +1,16 @@
-#notification-container {
+/* #notification-container {
   position: relative;
-  left: 32vw;
   height: 65vh;
-  width: 30vw;
+  width: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+.notification-list{
+  min-height: 60vh;
+  width: 35vw;
+  align-self: center;
 }
-
 .notification-header {
   color: var(--text-primary);
   padding: 10px;
@@ -21,35 +27,58 @@
   font-size: 1rem;
   background-color: red;
   color: white;
+  cursor: pointer;
   font-weight: 600;
   border: 1px solid red;
 }
 
-.notification-list {
+/* .notification-list {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
   background-color: transparent;
-}
+} */
 
 .no-notifications {
   text-align: center;
-  color: #777;
+  color: var(--text-primary);
   font-size: larger;
 }
 
 .notification-item {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   padding: 8px;
-  border-radius: 6px;
+  /* border-radius: 18px;
+  border: 1px solid #ccc; */
+  width: 40rem;
+  min-height: 10vh;
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+/* .notification-item {
+  background: var(--bg-secondary);
+  color: var(--text-primary);
+  font-size: 1.3rem;
+  transition: transform 0.3s ease;
+}
+.notification-item:hover{
+  transform: scale(1.05);
+} */
+.eachNote {
+  background: var(--bg-secondary);
+  margin-bottom: 10px;
+  color: var(--text-primary);
+  border-radius: 18px;
   border: 1px solid #ccc;
-  width: 50rem;
+  font-size: 1.3rem;
+  transition: transform 0.3s ease;
 }
-
-.notification-item {
-  background-color: #d1e7dd; /* greenish */
+.eachNote:hover{
+  transform: scale(1.05);
 }
-
 /* .notification-item.received {
   background-color: #fff3cd; 
 } */
@@ -64,7 +93,7 @@
 
 .notification-time {
   font-size: 0.8em;
-  color: #555;
+  color: var(--text-primary);
 }
 
 .notification-form {
@@ -94,11 +123,26 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 .clear{
   font-family: var(--font-heading);
   font-size: 2rem;
   color: red;
   cursor: pointer;
+  padding: 0.1rem;
+  border-radius: 10px;
+  width: 2rem;
+  font-weight: bolder;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.5s ease,color 0.5s ease,transform 0.3s ease;
+}
+
+.clear:hover{
+  background-color: rgb(248, 114, 114);
+  color: white;
+  transform: rotate(90deg);
 }
