saving tags in DB modified schema for community post

--- a/frontend/src/Styles/eachPost.css
+++ b/frontend/src/Styles/eachPost.css
@@ -165,3 +165,11 @@
   font-style: italic;
   font-size: 0.95rem;
 }
+
+
+#tl2{
+  margin-top: 3rem;
+}
+.taghead{
+  color: var(--text-primary);
+}
