--- a/frontend/src/Styles/modelEach.css
+++ b/frontend/src/Styles/modelEach.css
@@ -204,22 +204,35 @@
   flex-direction: row;
   background-color: var(--bg-translucent);
   border-radius: 2rem;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .model-specifics>div{
   width:50%;
   padding: 0rem 1rem 0rem 2rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .model-specifics-heading{
   text-align: center;
   font-weight: 900;
+  margin: 0 0 2rem 0;
 }
 
 .model-prerequisites{
   border-left: 2px solid var(--text-primary);
+}
+
+.model-prerequisite-item{
+  border: 1px solid var(--text-primary);
+  padding: 1rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.4);
+}
+
+.model-prerequisite-item:hover{
+  background-color: var(--bg-translucent);
 }
 
 .customization-toggler {
