--- a/frontend/src/Styles/modelEach.css
+++ b/frontend/src/Styles/modelEach.css
@@ -1,5 +1,5 @@
 .model-view-page{
-  padding: 2rem 6rem;
+  padding: 3rem 7rem;
   color: var(--text-primary);
   min-height: 50vh;
 }
@@ -26,6 +26,13 @@
   gap: 1rem;
 }
 
+.model-status-tag{
+  background-color:#cccccc55;
+  font-size:1.6rem;
+  padding:0.4rem 0.8rem; 
+  border-radius:1.2rem
+}
+
 .model-owner{
   display: flex;
   flex-direction: row;
@@ -45,6 +52,14 @@
 .model-owner-details p{
   padding: 0;
   margin: 0;
+}
+
+.model-owner-name{
+  font-size: 1.8rem;
+}
+
+.model-owner-contributions{
+  font-size: 1.2rem;
 }
 
 .model-interactbox{
@@ -398,4 +413,93 @@ input, textarea, [contenteditable="true"] {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+@media (max-width: 1260px) {
+  .model-preview-img{
+    width: 38rem;
+    height: 30rem;
+    margin: 5rem 0 5rem 0;
+    border: 2px solid #ccc;
+    border-radius: 2rem;
+  }
+}
+
+@media (max-width: 1170px) {
+  .model-title{
+    font-size: 3rem;
+  }
+  .model-details{
+    flex-direction: column;
+    padding: 4rem 0;
+    width: 100%;
+    align-items: center;
+  }
+  .model-preview-img{
+    width: 48rem;
+    height: 40rem;
+    margin: 0rem 0 0rem 0;
+  }
+  .model-description{
+    width: 100%;
+    min-height: 40rem;
+  }
+  .model-view-page{
+    padding: 3rem 1rem;
+  }
+}
+
+@media (max-width: 670px) {
+  .model-preview{
+    display: flex;
+    justify-content: center;
+    aspect-ratio: 1/1
+  }
+  .model-preview-img{
+    width: 90%;
+    height: 90%;
+  }
+  .model-description{
+    width: 100%;
+    min-height: 40rem;
+  }
+  .model-customize-scrollerbtn{
+    display: none;
+  }
+}
+
+@media (max-width: 670px) {
+  .model-specifics{
+    flex-direction: column;
+    align-items: center;
+  }
+  .model-prerequisites{
+    border-left: none;
+    border-top: 2px solid var(--text-primary);
+  }
+  .model-specifics>div{
+    width:80%;
+    padding: 1rem;
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .model-title{
+    font-size: 2rem;
+    margin: 2rem 0 1rem 0 ;
+  }
+  .model-status-tag{
+    font-size:1.2rem;
+    padding:0.4rem 0.6rem; 
+    border-radius:0.5rem
+  }
+  .model-owner-name{
+    font-size: 1.6rem;
+  }
+
+  .model-owner-contributions{
+    font-size: 1rem;
+  }
+
 }
