--- a/frontend/src/Styles/resources.css
+++ b/frontend/src/Styles/resources.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem 3rem;
-    min-height: 100vh;
+    padding: 2rem 0 6rem 0;
 }
 .resources-page>section{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 4rem;
 }
 
 .components-container{
