Final changes and corrections

--- a/frontend/src/Styles/sideBar.css
+++ b/frontend/src/Styles/sideBar.css
@@ -34,20 +34,20 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  color: var(--text-primary);
+  color: black;
   text-decoration: none;
   font-size: 1.2rem;
   padding: 1.3rem 1.3rem;
   border-radius: 4px;
   font-family: var(--font-heading);
-  font-size: medium;
-  font-weight: 200;
+  /* font-size: medium; */
+  font-weight: 500;
   transition: all 0.3s ease;
   height: 100%;
 }
 .nav-link:hover {
   background: var(--bg-hover); /* subtle light blue background */
-  color: var(--primary-blue);
+  color: var(--text-secondary);
 }
 
 .close-btn {
