--- a/frontend/src/Styles/community.css
+++ b/frontend/src/Styles/community.css
@@ -1,5 +1,7 @@
 #community-wrapper {
-  padding: 3rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 12vh;
   /* background-color: #f9f9f9; */
   display: flex;
   gap: 0.3rem;
