--- a/frontend/src/Styles/signUp.css
+++ b/frontend/src/Styles/signUp.css
@@ -184,3 +184,9 @@ input::placeholder {
   background-color: #1976d2;
   color: white;
 }
+@media (max-width:480px) {
+  .auth-form{
+    padding: 1rem 2rem;
+    min-width: 80vw;
+  }
+}
